# msc-thesis-public

./: .clang-format  CMakeLists.txt  README.md
data/paper-data/: ans tests  bitcomp tests  combined.md  fsst tests  lz4 tests  snappy tests  v0 tests  v1 tests  v2 tests  v3 tests
data/thesis-data/blackwell-tests/: 5090-general-perf-compare  5090-gtsst-tests  5090-nvcomp-tests  compared-to-4090-summary
data/thesis-data/block-size-limits/: block-size-1  block-size-128  block-size-16  block-size-2  block-size-32  block-size-4  block-size-64  block-size-8  block-size-summary
data/thesis-data/fsst-base/: 1gb  2gb  3gb
data/thesis-data/gsst/: 128-10240-48  128-1280-384  128-163840-3  128-20480-24  128-2560-192  128-40960-12  128-5120-96  128-81920-6  160-10240-38  160-1280-308  160-163840-2  160-20480-19  160-2560-154  160-40960-10  160-5120-77  160-81920-5  32-10240-192  32-1280-1536  32-163840-12  32-20480-96  32-2560-768  32-40960-48  32-5120-384  32-81920-24  64-10240-96  64-1280-768  64-163840-6  64-20480-48  64-2560-384  64-40960-24  64-5120-192  64-81920-12  96-10240-64  96-1280-512  96-163840-4  96-20480-32  96-2560-256  96-40960-16  96-5120-128  96-81920-8  (+2 more)
data/thesis-data/hash-limits/: hash-limits-0  hash-limits-10  hash-limits-100  hash-limits-110  hash-limits-120  hash-limits-125  hash-limits-130  hash-limits-140  hash-limits-15  hash-limits-150  hash-limits-200  hash-limits-25  hash-limits-250  hash-limits-50  hash-limits-60  hash-limits-70  hash-limits-80  hash-limits-90  hash-summary
data/thesis-data/histogram-tests/: symbol-lengths-no-limits
data/thesis-data/perf-tests/: dataset_table.tgn  energy_table.tgn  gpustats_table.tgn  hwstats_table.tgn  mem_usage_table.tgn  occupancy_table.tgn
data/thesis-data/prelim tests/: prelim-versions
data/thesis-data/smem-tests/: v5t-gsst-comparison
include/bench/: gtsst-bench.cuh  gtsst-prepare.cuh
include/compressors/: shared.cuh
include/compressors/compactionv1/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/compactionv2/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh  compaction-transpose.cuh
include/compressors/compactionv3/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/compactionv3t/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/compactionv4/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/compactionv4t/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/compactionv5t/: compaction-compressor.cuh  compaction-defines.cuh  compaction-encode.cuh
include/compressors/plain/: plain-compressor.cuh
include/compressors/slidingv1/: sliding-compressor.cuh  sliding-defines.cuh  (+1 more)
include/fsst/: fsst-lib.cuh  fsst.cuh  gtsst-fsst.cuh
include/gtsst/: gtsst-ell-table.cuh  gtsst-match-table.cuh  gtsst-sliding-table.cuh  gtsst-symbols.cuh  gtsst-tables.cuh  gtsst.cuh
src/: main.cu
src/bench/: gtsst-bench.cu  gtsst-prepare.cu
src/compressors/: shared.cu
src/fsst/: gtsst-fsst.cu
(+209 files in other folders)
